# psql-spatial-data-store

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
docker-folder/: docker-compose.yaml
docker-folder/docker-dev/: Makefile  docker-compose.yaml  setup_ssh_and_rsync.sh
docker-folder/docker-dev/db_data/: postmaster.pid
docker-folder/docker-dev/db_data/base/1/: 2619
docker-folder/docker-dev/db_data/base/13445/: pg_internal.init
docker-folder/docker-dev/db_data/base/16384/: 1247  1249  1255  1259  18302_vm  18309  19012  19021  19022  19024  19033  19034  19036  19179  19180  19182  19187  19188  19192  19195  19197  19198  19201  19203  19204  19204_vm  19207  19209  19211  19213  19215  19219  19221  19225  19227  19228  19232  19234  19235  19239  (+145 more)
docker-folder/docker-dev/db_data/base/16385/: 1249  1259  16693_vm  17595  17595_vm  17598  17600  17602  17604  17940  17940_vm  17952  17952_vm  17960  2608  2608_vm  2619  2619_vm  2673  2674  2696  2840  2841  pg_internal.init
docker-folder/docker-dev/db_data/global/: 1260  1262  2671  2676  2964  2965  pg_control  pg_internal.init
docker-folder/docker-dev/db_data/pg_stat_tmp/: db_0.stat  db_13445.stat  db_16384.stat  db_16385.stat  global.stat
docker-folder/dockerfiles/dockerfile-dev/: Dockerfile
docker-folder/dockerfiles/dockerfile-postgres/: Dockerfile
sql/: model.sql
